# PNX

./: .env-example  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile
pnx/: __main__.py  agent.py  anthropic_agent.py  assistant.py  bot.py  config.py  events.py  models.py  prompts.py  research.py  schema.json  test.py  tools.py  utils.py
pnx/actions/: describe_problem.json
pnx/agency/: dev.py  prospector.py  research.py  writer.py
pnx/tools/: crypto.py  search.py  tools.py  website.py
