[tool.poetry]
name = "pnx"
version = "0.1.0"
description = "Product info extractor"
authors = ["JimothyJohn <drunknmunky32@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.33.0"
tenacity = "^8.3.0"
termcolor = "^2.4.0"
linkedin-api = "^2.1.1"
browser-cookie3 = "^0.19.1"
zi-api-auth-client = "^2.0.1"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
